test/types/partial/bad-managed-init.owned.good
bad-managed-init.chpl:9: In function 'main':
bad-managed-init.chpl:11: error: cannot initialize 'owned C(int(64))' from a 'owned C(real(64),4)'
note: An additional error is hidden. Use --print-additional-errors to see it.
