test/types/partial/bad-managed-init.compopts
--print-callstack-on-error -suseOwned=true  # bad-managed-init.owned.good
--print-callstack-on-error -suseOwned=false # bad-managed-init.shared.good
